# NSI_cours_accompagnement

./: AUDIT_COMPLET_NEXUS_REUSSITE.md  BUILD_FINAL_REPORT.md  LANCEMENT_SERVICES_REPORT.md  LOGO_WEBP_OPTIMIZATION_REPORT.md  NETTOYAGE_COMPLET_RAPPORT.md  NETTOYAGE_NEXUS_COMPLET_FINAL.md  PRODUCTION_DEPLOYMENT_CHECKLIST.md  README.md  VARIABLES_ENVIRONNEMENT_COMPLETES.md  apercu_nexus.sh  audit_prompt_nexus.md  build_complet.sh  build_final.sh  corriger_et_build.sh  demarrer_nexus_reel.sh  demo_nexus.sh  diagnostic_rapide.sh  fix_and_launch.sh  lancement_definitif.py  lancer_nexus.sh  launch_now.sh  nettoyer_cache_vscode.sh  nettoyer_vscode.sh  nexus_launcher.py  nuke_backend_fantome.sh  pyproject.toml  resoudre_pylint.sh  restart_frontend.sh  run.py  start.sh  start_backend.py  start_express.sh  start_frontend.py  start_nexus.sh  test_build_simple.sh  test_config.py  test_imports.py  test_imports_diagnostic.py  test_pret.sh  verif_finale.sh
frontend/: docker-entrypoint.sh  jsconfig.json
nexus-reussite/: .gitignore  .pre-commit-config.yaml  .pylintrc  .safety-project.ini  .secrets.baseline  APERCU_LANCE.md  (+33 more)
nexus-reussite/backend/: .coveragerc  .env  .env.example  .env.production.example  .env.production.template  .pre-commit-config.yaml  AUDIT_REPORT.md  CHANGELOG.md  CI_CD_DOCUMENTATION.md  CLEANUP_PLAN.md  DOCKER_EVALUATION_RESULTS.md  Dockerfile  Dockerfile.dev  Dockerfile.prod  Dockerfile.production.clean  Dockerfile.production.new  LINT_CORRECTIONS.md  PRODUCTION_DEPLOYMENT.md  README.md  RESOLUTION_IMPORTS.md  STEP_11_COMPLETION_SUMMARY.md  STEP_1_COMPLETION_SUMMARY.md  STEP_3_COMPLETION_SUMMARY.md  STEP_3_DEPENDENCY_AUTOMATION_COMPLETE.md  STEP_7_COMPLETION_SUMMARY.md  STEP_9_SUMMARY.md  TROUBLESHOOTING.md  app.py  conftest.py  content_bank.json  detect_circular_imports.py  dev_server.py  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  documents.db  env.production.template  fix_dockerfile.sh  fix_dockerfile_final.sh  flask_cli.py  (+22 more)
nexus-reussite/backend/.github/deploy/: deploy.sh  kubernetes.yml
nexus-reussite/backend/.github/workflows/: ci-cd.yml  ci.yml  database-checks.yml  performance-test.yml  security-audit.yml
nexus-reussite/backend/database/: dev_init.sql
nexus-reussite/backend/docs/: api_integration.py  development.md  security.md
nexus-reussite/backend/experiments/: Dockerfile.production
nexus-reussite/backend/helm/nexus-reussite-backend/: Chart.yaml  values.yaml
nexus-reussite/backend/helm/nexus-reussite-backend/templates/: _helpers.tpl  deployment.yaml
nexus-reussite/backend/instance/: nexus_reussite.db
nexus-reussite/backend/migrations/: alembic.ini
nexus-reussite/backend/migrations/versions/: a83ea12f3b78_initial_migration_with_all_models.py
nexus-reussite/backend/nginx/: default.conf  nginx.conf
nexus-reussite/backend/scripts/: check-unused-deps.py  check_schema_drift.py  deploy.sh  healthcheck.py  publish_docs.py  run_tests.sh  update-requirements-hash.sh  update-requirements-lock.sh
nexus-reussite/backend/src/: __init__.py  app.py  config.py  config_production.py  database.py  documents.db  flask_cli.py  main.py  main_production.py  main_simple.py  performance_optimizer.py  secrets_loader.py
nexus-reussite/backend/src/database/: init_db.py  init_db_improved.py
nexus-reussite/backend/src/database_scripts/: __init__.py  app.db  init_db.py  init_production.py
nexus-reussite/backend/src/docs/: __init__.py
nexus-reussite/backend/src/middleware/: __init__.py  cors_enhanced.py  security.py
nexus-reussite/backend/src/models/: __init__.py  base.py  content_system.py  formulas.py  student.py  user.py
nexus-reussite/backend/src/models/schemas/: __init__.py  base.py  content_system.py  user.py
nexus-reussite/backend/src/routes/: __init__.py  aria.py  auth.py  documents.py  formulas.py  monitoring.py  openai_routes.py  students.py  user.py  video_conference_routes.py  websocket_routes.py
nexus-reussite/backend/src/services/: __init__.py  aria_ai.py  aria_ai_simple.py  cache_service.py  content_bank.py  content_engine.py  document_database.py  jwt_blacklist.py  openai_integration.py  parent_dashboard.py  pdf_generator.py  real_content_bank.py  video_conference.py  websocket_service.py
nexus-reussite/backend/src/static/: index.html  index_backup.html
nexus-reussite/backend/src/static/assets/: index-QhmvYDS4.css
nexus-reussite/backend/src/static/components/: teachers-section.js
nexus-reussite/backend/src/static/css/: components.css
nexus-reussite/backend/src/static/parent/: index.html
nexus-reussite/backend/src/static/parent/assets/: index-CzvBN0Cd.css
nexus-reussite/backend/src/static_backup/: calendly-booking-system.js  index.html
nexus-reussite/backend/src/static_backup/assets/: index-D-DCfcUd.js
nexus-reussite/backend/src/static_backup/components/: hero-section.js  testimonials-section.js
nexus-reussite/backend/src/static_backup/parent/: index.html
nexus-reussite/backend/src/static_backup/parent/assets/: index-CZ7S1QE5.js
nexus-reussite/backend/src/utils/: __init__.py  error_handlers.py  logging.py  rate_limit.py  validators.py
nexus-reussite/backend/tests/: __init__.py  conftest.py  test_main_api.py
nexus-reussite/backend/tests/factories/: __init__.py  content_factory.py  student_factory.py  user_factory.py
nexus-reussite/backend/tests/integration/: test_api_integration.py  test_auth_routes.py  test_exercise_routes.py
nexus-reussite/backend/tests/integration/routes/: test_user_routes.py
nexus-reussite/backend/tests/performance/: locustfile.py
nexus-reussite/backend/tests/security/: zap_security_tests.py
nexus-reussite/backend/tests/unit/: test_exercise.py  test_notification.py  test_notification_service.py  test_serializers_error_handlers.py  test_student_routes.py  test_student_routes_fixed.py  test_teacher.py
nexus-reussite/backend/tests/unit/models/: test_student.py  test_user.py
nexus-reussite/backend/tests/unit/services/: test_aria_service.py  test_aria_service_enhanced.py  test_document_service.py
nexus-reussite/backend/tests/unit/utils/: test_rate_limiting.py
(+170 files in other folders)
